# HydroAlert-FreeRTOS-RP2040

./: CMakeLists.txt  EstacaoDeMonitoramento.c  README.md
